Shorten !winner to !w, fix guess alignment, !gg just closes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,6 +14,10 @@ body {
     margin: 0 auto;
   }
 
+.float-right {
+  float: right;
+}
+
 /* Typography */
 .font-light {
   color: #FFF;
